feature: added configuration + base tests + models

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,3 +3,10 @@ browser.options = --headless
 base.url = https://www.globalsqa.com
 managerPage.url = /angularJs-protractor/BankingProject/#/manager
 managerPage.addCustomer.url = /angularJs-protractor/BankingProject/#/manager/addCust
+
+test.api.url = http://localhost:8088/api
+test.api.entityEndpoints.create = /create
+test.api.entityEndpoints.delete = /delete/
+test.api.entityEndpoints.get = /get/
+test.api.entityEndpoints.getAll = /getAll
+test.api.entityEndpoints.patch = /patch/
