--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,14 @@
             <version>2.10.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -169,6 +177,8 @@
                             junit.jupiter.execution.parallel.mode.default=concurrent
                         </configurationParameters>
                     </properties>
+                    <forkCount>2</forkCount>
+                    <reuseForks>true</reuseForks>
                 </configuration>
             </plugin>
             <plugin>
