--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
                             junit.jupiter.execution.parallel.mode.default=concurrent
                         </configurationParameters>
                     </properties>
-                    <forkCount>2</forkCount>
+                    <forkCount>5</forkCount>
                     <reuseForks>true</reuseForks>
                 </configuration>
             </plugin>
@@ -186,8 +186,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>17</source> <!-- Установите версию Java -->
-                    <target>17</target> <!-- Установите версию Java -->
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
